--- a/pages/rutas.html
+++ b/pages/rutas.html
@@ -14,8 +14,17 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand">Canarias</a>
+      <div class="container">
+        <a class="navbar-brand"
+          ><img
+            src="/img/pdc-logo.png"
+            class=""
+            width="20px"
+            height="30px"
+            alt="Escudo Gobierno de Canarias."
+          />Canarias</a
+        >
+
         <button
           class="navbar-toggler"
           type="button"
@@ -28,23 +37,66 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
+          <div class="navbar-nav me-auto mb-2 mb-lg-0">
             <a class="nav-link" href="../index.html">Portada</a>
             <a class="nav-link" href="./deportes.html">Deportes</a>
-            <a class="nav-link active" aria-current="page" href="./rutas.html">Rutas</a>
-            <a class="nav-link " href="./contacto.html">Contacto</a>
+            <a class="nav-link active" aria-current="page" href="./rutas.html"
+              >Rutas</a
+            >
+            <a class="nav-link" href="./contacto.html">Contacto</a>
+            <a href="#" class="nav-link disabled">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-exclamation-triangle-fill text-warning"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"
+                />
+              </svg>
+            </a>
+            <a href="#" class="nav-link disabled">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-exclamation-circle-fill text-danger"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4zm.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"
+                />
+              </svg>
+            </a>
           </div>
+          <form class="d-flex">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+            <button class="btn btn-outline-success" type="submit">
+              Search
+            </button>
+          </form>
         </div>
       </div>
     </nav>
 
     <!-- Breadcrumb-->
-    <nav aria-label="breadcrumb">
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="../index.html">Portada</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Rutas</li>
-      </ol>
-    </nav>
+    <div class="container">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="../index.html">Portada</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Rutas</li>
+        </ol>
+      </nav>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
