--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
   </head>
   <body>
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand"
@@ -24,7 +25,6 @@
             alt="Escudo Gobierno de Canarias."
           />Canarias</a
         >
-
         <button
           class="navbar-toggler"
           type="button"
@@ -71,24 +71,158 @@
                   d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4zm.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"
                 />
               </svg>
-            </a>            
+            </a>
           </div>
-          <form class="d-flex ">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
+          <form class="d-flex">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+            <button class="btn btn-outline-success" type="submit">
+              Search
+            </button>
           </form>
         </div>
       </div>
     </nav>
-    <!-- Nav para breadcrumb-->
+
+    <!--  Area pricipal -->
     <div class="container">
-      <nav aria-label="breadcrumb">
+      <!-- Nav para breadcrumb-->
+      <nav class="nav p-3" aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item active" aria-current="page">Portada</li>
         </ol>
       </nav>
+
+      <!-- Nav con enlaces a las distintas secciones de la web -->
+      <ul class="nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Población</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Menú</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Precios</a>
+        </li>
+      </ul>
+
+      <!-- Apartado de poblaciónes-->
+      <h3>Poblacón por provinicas</h3>
+      <div class="container">
+        <h4>Santa Cruz de Tenerife</h4>
+        <ul class="list-group">
+          <li
+            class="
+              list-group-item list-group-item-action
+              d-flex
+              justify-content-between
+            "
+          >
+            Tenerife <span class="badge bg-primary">966.354</span>
+          </li>
+          <li
+            class="
+              list-group-item list-group-item-action
+              d-flex
+              justify-content-between
+            "
+          >
+            La Gomera<span class="badge bg-primary">22.426</span>
+          </li>
+          <li
+            class="
+              list-group-item list-group-item-action
+              d-flex
+              justify-content-between
+            "
+          >
+            El Hierro <span class="badge bg-primary">11.338</span>
+          </li>
+          <li
+            class="
+              list-group-item list-group-item-action
+              d-flex
+              justify-content-between
+            "
+          >
+            La Palma <span class="badge bg-primary">85.840</span>
+          </li>
+        </ul>
+
+        <h4>Las Palmas de Gran Canaria</h4>
+        <div class="btn-group-vertical btn-group-lg d-flex" role="group">
+          <a
+            href="#"
+            class="btn btn-outline-dark d-flex justify-content-between"
+            >Gran Canaria
+            <span class="badge rounded-pill bg-info">870.595</span></a
+          >
+          <a
+            href="#"
+            class="btn btn-outline-dark d-flex justify-content-between"
+            >Lanzarote<span class="badge rounded-pill bg-info">154.530</span></a
+          >
+          <a
+            href="#"
+            class="btn btn-outline-dark d-flex justify-content-between"
+            >Fuerteventura<span class="badge rounded-pill bg-info"
+              >126.227</span
+            ></a
+          >
+          <a
+            href="#"
+            class="btn btn-outline-dark d-flex justify-content-between"
+            >La Graciosa<span class="badge rounded-pill bg-info">734</span></a
+          >
+        </div>
+      </div>
+
+      <!-- Apartado de Gastronomía-->
+      <h2>
+        Gastronomía
+        <div class="container">
+          <h3>Menu</h3>
+          <div class="container">
+            <h3>Primeros</h3>
+            <div class="list-group">
+              <a href="#" class="list-group-item">Ensalada Tropical</a
+              ><a href="#" class="list-group-item">Escaldón</a
+              ><a href="#" class="list-group-item">Queso Asado</a
+              ><a href="#" class="list-group-item">Croquetas</a>
+            </div>
+            <h3>Segundos</h3>
+            <div class="list-group">
+              <a href="#" class="list-group-item list-group-item-primary"
+                >Carne Fiesta</a
+              ><a href="#" class="list-group-item list-group-item-primary"
+                >Pollo Asado</a
+              ><a href="#" class="list-group-item list-group-item-primary"
+                >Garbanzas</a
+              ><a href="#" class="list-group-item list-group-item-primary"
+                >Potaje Berros</a
+              >
+            </div>
+            <h3>Postres</h3>
+            <div class="list-group">
+              <a href="#" class="list-group-item list-group-item-warning"
+                >Polvito Uruguayo</a
+              ><a href="#" class="list-group-item list-group-item-warning"
+                >Principe Alberto</a
+              ><a href="#" class="list-group-item list-group-item-warning"
+                >Frangoyo</a
+              ><a href="#" class="list-group-item list-group-item-warning"
+                >Quesillo</a
+              >
+            </div>
+          </div>
+        </div>
+      </h2>
     </div>
-    <!--     --             -->
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
