Fixes to layout using rows and cols

--- a/index.html
+++ b/index.html
@@ -88,139 +88,196 @@
       </div>
     </nav>
 
-    <!--  Area pricipal -->
     <div class="container">
-      <!-- Nav para breadcrumb-->
-      <nav class="nav p-3" aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item active" aria-current="page">Portada</li>
-        </ol>
-      </nav>
-
-      <!-- Nav con enlaces a las distintas secciones de la web -->
-      <ul class="nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Población</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Menú</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Precios</a>
-        </li>
-      </ul>
-
-      <!-- Apartado de poblaciónes-->
-      <h3>Poblacón por provinicas</h3>
-      <div class="container">
-        <h4>Santa Cruz de Tenerife</h4>
-        <ul class="list-group">
-          <li
-            class="
-              list-group-item list-group-item-action
-              d-flex
-              justify-content-between
-            "
-          >
-            Tenerife <span class="badge bg-primary">966.354</span>
-          </li>
-          <li
-            class="
-              list-group-item list-group-item-action
-              d-flex
-              justify-content-between
-            "
-          >
-            La Gomera<span class="badge bg-primary">22.426</span>
-          </li>
-          <li
-            class="
-              list-group-item list-group-item-action
-              d-flex
-              justify-content-between
-            "
-          >
-            El Hierro <span class="badge bg-primary">11.338</span>
-          </li>
-          <li
-            class="
-              list-group-item list-group-item-action
-              d-flex
-              justify-content-between
-            "
-          >
-            La Palma <span class="badge bg-primary">85.840</span>
-          </li>
-        </ul>
-
-        <h4>Las Palmas de Gran Canaria</h4>
-        <div class="btn-group-vertical btn-group-lg d-flex" role="group">
-          <a
-            href="#"
-            class="btn btn-outline-dark d-flex justify-content-between"
-            >Gran Canaria
-            <span class="badge rounded-pill bg-info">870.595</span></a
-          >
-          <a
-            href="#"
-            class="btn btn-outline-dark d-flex justify-content-between"
-            >Lanzarote<span class="badge rounded-pill bg-info">154.530</span></a
-          >
-          <a
-            href="#"
-            class="btn btn-outline-dark d-flex justify-content-between"
-            >Fuerteventura<span class="badge rounded-pill bg-info"
-              >126.227</span
-            ></a
-          >
-          <a
-            href="#"
-            class="btn btn-outline-dark d-flex justify-content-between"
-            >La Graciosa<span class="badge rounded-pill bg-info">734</span></a
-          >
+      <div class="row">
+        <div class="col">
+          <!-- Nav para breadcrumb-->
+          <nav class="nav p-3" aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item active" aria-current="page">
+                Portada
+              </li>
+            </ol>
+          </nav>
         </div>
       </div>
-
-      <!-- Apartado de Gastronomía-->
-      <h2>
-        Gastronomía
-        <div class="container">
-          <h3>Menu</h3>
+      <div class="row">
+        <div class="col-xs-12 col-lg-2">
+          <!-- Nav con enlaces a las distintas secciones de la web -->
+          <ul class="nav flex-lg-column">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Población</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Menú</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Precios</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col col-xs-12 col-lg-10">
           <div class="container">
-            <h3>Primeros</h3>
-            <div class="list-group">
-              <a href="#" class="list-group-item">Ensalada Tropical</a
-              ><a href="#" class="list-group-item">Escaldón</a
-              ><a href="#" class="list-group-item">Queso Asado</a
-              ><a href="#" class="list-group-item">Croquetas</a>
+            <!-- Apartado de poblaciónes-->
+            <div class="container">
+              <div class="row">
+                <div class="col">
+                  <h3>Poblacón por provinicas</h3>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xs-12 col-lg-6">
+                  <h4>Santa Cruz de Tenerife</h4>
+                  <ul class="list-group">
+                    <li
+                      class="
+                        list-group-item list-group-item-action
+                        d-flex
+                        justify-content-between
+                      "
+                    >
+                      Tenerife <span class="badge bg-primary">966.354</span>
+                    </li>
+                    <li
+                      class="
+                        list-group-item list-group-item-action
+                        d-flex
+                        justify-content-between
+                      "
+                    >
+                      La Gomera<span class="badge bg-primary">22.426</span>
+                    </li>
+                    <li
+                      class="
+                        list-group-item list-group-item-action
+                        d-flex
+                        justify-content-between
+                      "
+                    >
+                      El Hierro <span class="badge bg-primary">11.338</span>
+                    </li>
+                    <li
+                      class="
+                        list-group-item list-group-item-action
+                        d-flex
+                        justify-content-between
+                      "
+                    >
+                      La Palma <span class="badge bg-primary">85.840</span>
+                    </li>
+                  </ul>
+                </div>
+                <div class="col-xs-12 col-lg-6">
+                  <h4>Las Palmas de Gran Canaria</h4>
+                  <div
+                    class="btn-group-vertical btn-group-lg d-flex"
+                    role="group"
+                  >
+                    <a
+                      href="#"
+                      class="
+                        btn btn-outline-dark
+                        d-flex
+                        justify-content-between
+                      "
+                      >Gran Canaria
+                      <span class="badge rounded-pill bg-info">870.595</span></a
+                    >
+                    <a
+                      href="#"
+                      class="
+                        btn btn-outline-dark
+                        d-flex
+                        justify-content-between
+                      "
+                      >Lanzarote<span class="badge rounded-pill bg-info"
+                        >154.530</span
+                      ></a
+                    >
+                    <a
+                      href="#"
+                      class="
+                        btn btn-outline-dark
+                        d-flex
+                        justify-content-between
+                      "
+                      >Fuerteventura<span class="badge rounded-pill bg-info"
+                        >126.227</span
+                      ></a
+                    >
+                    <a
+                      href="#"
+                      class="
+                        btn btn-outline-dark
+                        d-flex
+                        justify-content-between
+                      "
+                      >La Graciosa<span class="badge rounded-pill bg-info"
+                        >734</span
+                      ></a
+                    >
+                  </div>
+                </div>
+              </div>
             </div>
-            <h3>Segundos</h3>
-            <div class="list-group">
-              <a href="#" class="list-group-item list-group-item-primary"
-                >Carne Fiesta</a
-              ><a href="#" class="list-group-item list-group-item-primary"
-                >Pollo Asado</a
-              ><a href="#" class="list-group-item list-group-item-primary"
-                >Garbanzas</a
-              ><a href="#" class="list-group-item list-group-item-primary"
-                >Potaje Berros</a
-              >
-            </div>
-            <h3>Postres</h3>
-            <div class="list-group">
-              <a href="#" class="list-group-item list-group-item-warning"
-                >Polvito Uruguayo</a
-              ><a href="#" class="list-group-item list-group-item-warning"
-                >Principe Alberto</a
-              ><a href="#" class="list-group-item list-group-item-warning"
-                >Frangoyo</a
-              ><a href="#" class="list-group-item list-group-item-warning"
-                >Quesillo</a
-              >
+
+            <!-- Apartado de Gastronomía-->
+            <div class="container mt-4 ">
+              <div class="row">
+                <div class="col">
+                  <h2>Gastronomía</h2>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <h3>Menu</h3>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                  <h3>Primeros</h3>
+                  <div class="list-group">
+                    <a href="#" class="list-group-item">Ensalada Tropical</a
+                    ><a href="#" class="list-group-item">Escaldón</a
+                    ><a href="#" class="list-group-item">Queso Asado</a
+                    ><a href="#" class="list-group-item">Croquetas</a>
+                  </div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                  <h3>Segundos</h3>
+                  <div class="list-group">
+                    <a href="#" class="list-group-item list-group-item-primary"
+                      >Carne Fiesta</a
+                    ><a href="#" class="list-group-item list-group-item-primary"
+                      >Pollo Asado</a
+                    ><a href="#" class="list-group-item list-group-item-primary"
+                      >Garbanzas</a
+                    ><a href="#" class="list-group-item list-group-item-primary"
+                      >Potaje Berros</a
+                    >
+                  </div>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-4">
+                  <h3>Postres</h3>
+                  <div class="list-group">
+                    <a href="#" class="list-group-item list-group-item-warning"
+                      >Polvito Uruguayo</a
+                    ><a href="#" class="list-group-item list-group-item-warning"
+                      >Principe Alberto</a
+                    ><a href="#" class="list-group-item list-group-item-warning"
+                      >Frangoyo</a
+                    ><a href="#" class="list-group-item list-group-item-warning"
+                      >Quesillo</a
+                    >
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-      </h2>
+      </div>
+
+      <!--  Area pricipal -->
     </div>
 
     <script
