--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
           </ul>
         </div>
         <div class="col col-xs-12 col-lg-10">
-          <div class="container">
+          <div class="container p-0">
             <!-- Apartado de poblaciónes-->
-            <div class="container">
+            <div class="container g-xs-3">
               <div class="row">
                 <div class="col">
                   <h3>Poblacón por provinicas</h3>
@@ -222,7 +222,7 @@
             </div>
 
             <!-- Apartado de Gastronomía-->
-            <div class="container mt-4 ">
+            <div class="container mt-4 g-xs-3">
               <div class="row">
                 <div class="col">
                   <h2>Gastronomía</h2>
@@ -273,6 +273,134 @@
                 </div>
               </div>
             </div>
+
+            <!-- Apartado de Precios-->
+            <div class="container g-xs-3">
+              <div class="row">
+                <div class="col">
+                  <h3>Precios</h3>
+                </div>
+              </div>
+              <div class="row">
+                <!-- Precios de primeros -->
+                <div class="col-12">
+                  <table class="table">
+                    <thead>
+                      <tr class="table-dark">
+                        <th scope="col">#</th>
+                        <th scope="col">Primeros</th>
+                        <th scope="col">Ingredientes</th>
+                        <th scope="col">Precio</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th scope="row">1</th>
+                        <td>Ensalada</td>
+                        <td>Lechuga, mango y papaya</td>
+                        <td>7€</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">2</th>
+                        <td>Escaldón</td>
+                        <td>Gofio</td>
+                        <td>4€</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">3</th>
+                        <td>Queso Asado</td>
+                        <td>Leche de Cabra</td>
+                        <td>5€</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">4</th>
+                        <td>Croquetas</td>
+                        <td>Pollo, Cherne, Queso Azul</td>
+                        <td>6€</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <!-- Precios de Segundos -->
+                <div class="col-12">
+                  <table class="table table-primary table-striped">
+                    <thead>
+                      <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Segundos</th>
+                        <th scope="col">Ingredientes</th>
+                        <th scope="col">Precio</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th scope="row">1</th>
+                        <td>Carne Fiesta</td>
+                        <td>Cochino negro</td>
+                        <td class="text-center">7.5€</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">2</th>
+                        <td>Pollo Asado</td>
+                        <td>Pollo de corral</td>
+                        <td class="text-center">5.5€</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">3</th>
+                        <td>Garbanzas</td>
+                        <td>Garbanzas, carne de cochino</td>
+                        <td class="text-center">4€</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">4</th>
+                        <td>Potaje de Berros</td>
+                        <td>Berros, papas, bubango</td>
+                        <td class="text-center">5€</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <!-- Precios de Postres -->
+                <div class="col-12">
+                  <table class="table table-warning table-striped">
+                    <thead>
+                      <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Postres</th>
+                        <th scope="col">Ingredientes</th>
+                        <th scope="col">Precio</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th scope="row">1</th>
+                        <td>Polvito Uruguayo</td>
+                        <td>Dulce de leche</td>
+                        <td>3.5€</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">2</th>
+                        <td>Principe Alberto</td>
+                        <td>Huevo, leche y almendras</td>
+                        <td class="text-center">3€</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">3</th>
+                        <td>Frangoyo</td>
+                        <td>Huevo, leche y caramelo</td>
+                        <td class="text-center">2.75€</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">4</th>
+                        <td>Quesillo</td>
+                        <td>Huevos, leche, azucar</td>
+                        <td class="text-center">3€</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -284,6 +412,12 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"
+      integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D"
+      crossorigin="anonymous"
+      async
     ></script>
   </body>
 </html>
