--- a/pages/deportes.html
+++ b/pages/deportes.html
@@ -13,6 +13,7 @@
     />
   </head>
   <body>
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand"
@@ -24,7 +25,6 @@
             alt="Escudo Gobierno de Canarias."
           />Canarias</a
         >
-
         <button
           class="navbar-toggler"
           type="button"
@@ -39,14 +39,9 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav me-auto mb-2 mb-lg-0">
             <a class="nav-link" href="../index.html">Portada</a>
-            <a
-              class="nav-link active"
-              aria-current="page"
-              href="./deportes.html"
-              >Deportes</a
-            >
+            <a class="nav-link active" aria-current="page" href="#">Deportes</a>
             <a class="nav-link" href="./rutas.html">Rutas</a>
-            <a class="nav-link" href="./contacto.html">Contacto</a>
+            <a class="nav-link" href="./pages/contacto.html">Contacto</a>
             <a href="#" class="nav-link disabled">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -90,15 +85,72 @@
         </div>
       </div>
     </nav>
-
-    <!-- Breadcrumb-->
     <div class="container">
-      <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="../index.html">Portada</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Deportes</li>
-        </ol>
-      </nav>
+      <!-- Breadcrumb-->
+      <div class="row">
+        <div class="col">
+          <nav class="nav p-3" aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item">
+                <a href="../index.html">Portada</a>
+              </li>
+              <li class="breadcrumb-item active" aria-current="page">
+                Deportes
+              </li>
+            </ol>
+          </nav>
+        </div>
+      </div>
+      <!-- Tarjetas de deportes-->
+      <div class="row g-0">
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card h-100">
+            <img src="../img/buceo.jpg" alt="" class="card-img-top" />
+            <div class="card-body">
+              <h5 class="card-title">Buceo</h5>
+              <p class="card-text">
+                This is a wider card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">Last updated 3 mins ago</small>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card h-100">
+            <img src="../img/parapente.jpg" alt="" class="card-img-top" />
+            <div class="card-body">
+              <h5 class="card-title">Parapente</h5>
+              <p class="card-text">
+                This card has supporting text below as a natural lead-in to
+                additional content.
+              </p>
+            </div>
+            <div class="card-footer text-center">
+              <small class="text-muted">Last updated 3 mins ago</small>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-12 col-lg-4">
+          <div class="card h-100">
+            <img src="../img/surf.jpg" alt="" class="card-img-top" />
+            <div class="card-body">
+              <h5 class="card-title">Surf</h5>
+              <p class="card-text">
+                This is a wider card with supporting text below as a natural
+                lead-in to additional content. This card has even longer content
+                than the first to show that equal height action.
+              </p>
+            </div>
+            <div class="card-footer text-end">
+              <small class=" text-muted">Last updated 3 mins ago</small>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script
