--- a/pages/rutas.html
+++ b/pages/rutas.html
@@ -24,7 +24,6 @@
             alt="Escudo Gobierno de Canarias."
           />Canarias</a
         >
-
         <button
           class="navbar-toggler"
           type="button"
@@ -39,11 +38,9 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav me-auto mb-2 mb-lg-0">
             <a class="nav-link" href="../index.html">Portada</a>
-            <a class="nav-link" href="./deportes.html">Deportes</a>
-            <a class="nav-link active" aria-current="page" href="./rutas.html"
-              >Rutas</a
-            >
-            <a class="nav-link" href="./contacto.html">Contacto</a>
+            <a class="nav-link active" aria-current="page" href="#">Deportes</a>
+            <a class="nav-link" href="./rutas.html">Rutas</a>
+            <a class="nav-link" href="./pages/contacto.html">Contacto</a>
             <a href="#" class="nav-link disabled">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -87,15 +84,22 @@
         </div>
       </div>
     </nav>
-
-    <!-- Breadcrumb-->
     <div class="container">
-      <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="../index.html">Portada</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Rutas</li>
-        </ol>
-      </nav>
+      <!-- Breadcrumb-->
+      <div class="row">
+        <div class="col">
+          <nav class="nav p-3" aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item">
+                <a href="../index.html">Portada</a>
+              </li>
+              <li class="breadcrumb-item active" aria-current="page">
+                Rutas
+              </li>
+            </ol>
+          </nav>
+        </div>
+      </div>
     </div>
 
     <script
