--- a/pages/rutas.html
+++ b/pages/rutas.html
@@ -93,12 +93,57 @@
               <li class="breadcrumb-item">
                 <a href="../index.html">Portada</a>
               </li>
-              <li class="breadcrumb-item active" aria-current="page">
-                Rutas
-              </li>
+              <li class="breadcrumb-item active" aria-current="page">Rutas</li>
             </ol>
           </nav>
         </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="card border-success">
+            <div class="card-header bg-danger text-light fs-2 pb-3">
+              Destacado
+            </div>
+            <img src="../img/rutas-marcos-cordero.jpg" alt="" class="card-img-top " />
+            <div class="card-body">
+              <h5 class="card-title">Ruta de Marcos y Cordero</h5>              
+              <p class="card-text">
+               Situada en la isla de La Palma, se considera una de las ruas indispensibles, no solo de esta islam sin de toda Canarias.
+              </p>
+            </div>            
+        </div>
+        <div class="col">
+          <div class="card bg-success text-light">
+            <div class="card-header ">
+              Frase Célebre
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">El arte</h5>              
+              <p class="card-text">
+                "El arte es algo mucho más importante, mucho más profundo, para no caer en la lelmental y pobre vulgaridad de la ordinarieza humana cada vez más acentuada, cuando no se ha planificado inteligentemente un despliegue de la llamada educación cívica y cultural."
+              </p>
+            </div>  
+            <div class="card-footer text-end">
+              <p>Cesar Manrique en <i>Memorias y Obras</i></p>
+            </div>
+        </div>
+        <div class="col">
+          <div class="card border-primary">
+            <img src="../img/rutas-barranco-las-vacas.jpg" alt="" class="card-img-top p-0" >
+            <div class="card-body">
+              <h5 class="card-title">Barranco las Vacas</h5>
+              <div class="card-text text-muted">Gran Canaria</div>
+              <div class="card-text">Estas llamativas formaciones tienen cierto parecido al famoso Antelope Canyon de Estados Unidos. ¿Por qué? Por sus peculiares formaciones rocosas llamadas Tovas de Colores.</div>
+            </div>
+            <div class="card-footer">Last updated 3 mins ago</div>
+          </div>
+        </div>
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
       </div>
     </div>
 
@@ -106,6 +151,12 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"
+      integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D"
+      crossorigin="anonymous"
+      async
     ></script>
   </body>
 </html>
