Finishes to masonry

--- a/pages/rutas.html
+++ b/pages/rutas.html
@@ -84,7 +84,7 @@
         </div>
       </div>
     </nav>
-    <div class="container">
+    <div class="container-lg">
       <!-- Breadcrumb-->
       <div class="row">
         <div class="col">
@@ -98,52 +98,144 @@
           </nav>
         </div>
       </div>
-      <div class="row">
-        <div class="col">
+
+      <div class="row" data-masonry='{"percentPosition": true }'>
+        <div class="col-12 col-sm-6 col-lg-4 mb-4">
           <div class="card border-success">
-            <div class="card-header bg-danger text-light fs-2 pb-3">
+            <div class="card-header bg-danger text-light fs-1 pb-3">
               Destacado
             </div>
-            <img src="../img/rutas-marcos-cordero.jpg" alt="" class="card-img-top " />
+            <img
+              src="../img/rutas-marcos-cordero.jpg"
+              alt=""
+              class="card-img-top"
+            />
             <div class="card-body">
-              <h5 class="card-title">Ruta de Marcos y Cordero</h5>              
+              <h5 class="card-title">Ruta de Marcos y Cordero</h5>
               <p class="card-text">
-               Situada en la isla de La Palma, se considera una de las ruas indispensibles, no solo de esta islam sin de toda Canarias.
+                Situada en la isla de La Palma, se considera una de las ruas
+                indispensibles, no solo de esta islam sin de toda Canarias.
               </p>
-            </div>            
+            </div>
+          </div>
         </div>
-        <div class="col">
+        <div class="col-12 col-sm-6 col-lg-4 mb-4">
           <div class="card bg-success text-light">
-            <div class="card-header ">
-              Frase Célebre
-            </div>
+            <div class="card-header">Frase Célebre</div>
             <div class="card-body">
-              <h5 class="card-title">El arte</h5>              
-              <p class="card-text">
-                "El arte es algo mucho más importante, mucho más profundo, para no caer en la lelmental y pobre vulgaridad de la ordinarieza humana cada vez más acentuada, cuando no se ha planificado inteligentemente un despliegue de la llamada educación cívica y cultural."
+              <h5 class="card-title">El Arte</h5>
+              <p class="card-text fs-4">
+                "El arte es algo mucho más importante, mucho más profundo, para
+                no caer en la lelmental y pobre vulgaridad de la ordinarieza
+                humana cada vez más acentuada, cuando no se ha planificado
+                inteligentemente un despliegue de la llamada educación cívica y
+                cultural."
               </p>
-            </div>  
-            <div class="card-footer text-end">
-              <p>Cesar Manrique en <i>Memorias y Obras</i></p>
+              <p class="blockquote-footer text-end text-light">
+                Cesar Manrique en <i>Memorias y Obras</i>
+              </p>
             </div>
+          </div>
         </div>
-        <div class="col">
+        <div class="col-12 col-sm-6 col-lg-4 mb-4">
           <div class="card border-primary">
-            <img src="../img/rutas-barranco-las-vacas.jpg" alt="" class="card-img-top p-0" >
+            <img
+              src="../img/rutas-barranco-las-vacas.jpg"
+              alt=""
+              class="card-img-top p-0"
+            />
             <div class="card-body">
               <h5 class="card-title">Barranco las Vacas</h5>
               <div class="card-text text-muted">Gran Canaria</div>
-              <div class="card-text">Estas llamativas formaciones tienen cierto parecido al famoso Antelope Canyon de Estados Unidos. ¿Por qué? Por sus peculiares formaciones rocosas llamadas Tovas de Colores.</div>
+              <div class="card-text">
+                <p>
+                  Estas llamativas formaciones tienen cierto parecido al famoso
+                  Antelope Canyon de Estados Unidos. ¿Por qué? Por sus
+                  peculiares formaciones rocosas llamadas Tovas de Colores.
+                </p>
+                <div class="card-text bg-body text-muted borderless">
+                  Last updated 3 mins ago
+                </div>
+              </div>
             </div>
-            <div class="card-footer">Last updated 3 mins ago</div>
           </div>
         </div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
+        <div class="col-12 col-sm-6 col-lg-4 mb-4">
+          <div class="card bg-primary text-light">
+            <div class="card-body text-center">
+              <blockquote class="blockquote mb-0">
+                <p>
+                  El agua se espera en la tierra y la guagua en la carretera
+                </p>
+                <footer class="blockquote-footer text-light">
+                  Refranero popular
+                </footer>
+              </blockquote>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-4 mb-4">
+          <div class="card bg-info text-light">
+            <div class="card-body text-center">
+              <h6 class="card-title">Mil Ventanas</h6>
+              <p class="card-text">
+                Ruta situada en el municipio de Güimar no apta para aquellas
+                personas que sufren miedo a las alturas
+              </p>
+              <p class="card-text">Foto cedida por un fotografo</p>
+            </div>
+            <div class="card-img">
+              <img
+                class="card-img-bottom"
+                src="../img/rutas-mil-ventanas.jpg"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-4 mb-4">
+          <div class="card">
+            <div class="card-img">
+              <img src="../img/rutas-teide.jpg" alt="" class="card-img-top" />
+            </div>
+            <div class="card-footer text-muted">Ascensión al Teide</div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-4 mb-4">
+          <div class="card">
+            <div class="card-img">
+              <img
+                class="card-img-top"
+                src="../img/rutas-volcanes.jpg"
+                alt=""
+              />
+              <div class="card-img-overlay">
+                <h5 class="card-title bg-light text-center">
+                  Ruta de Los Volcanes
+                </h5>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-4 mb-4">
+          <div class="card bg-warning">
+            <div class="card-body">
+              <blockquote class="blockquote mb-0">
+                <p>El viaje de mil millas comienza con un solo paso.</p>
+                <footer class="blockquote-footer">Frase motivadora</footer>
+              </blockquote>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-lg-4 mb-4">
+          <div class="card border-info">
+            <div class="card-header text-info">Tenerife</div>
+            <div class="card-img">
+              <img src="../img/rutas-afur.jpg" alt="" class="card-img-top" />
+            </div>
+            <div class="card-footer text-info">Barranco de afur</div>
+          </div>
+        </div>
       </div>
     </div>
 
