--- a/pages/rutas.html
+++ b/pages/rutas.html
@@ -38,9 +38,9 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav me-auto mb-2 mb-lg-0">
             <a class="nav-link" href="../index.html">Portada</a>
-            <a class="nav-link active" aria-current="page" href="#">Deportes</a>
-            <a class="nav-link" href="./rutas.html">Rutas</a>
-            <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+            <a class="nav-link " href="./deportes.html">Deportes</a>
+            <a class="nav-link active" aria-current="page" href="./rutas.html">Rutas</a>
+            <a class="nav-link" href="./contacto.html">Contacto</a>
             <a href="#" class="nav-link disabled">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
